--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,2 +1,209 @@
 @import '~bootstrap/scss/bootstrap';
 
+// table {
+//     border-collapse: collapse;
+// }
+// table, th, td {
+//     width: 100%;
+//     height: 50%;
+//     border: 1px solid black;
+//     padding: 0px;
+//     text-align: left;
+// }
+body {
+    font-family: 'Times New Roman', Times, serif;
+    background: url(star1.jpg) no-repeat center center fixed;
+    background-size: cover;
+    cursor: pointer;
+}
+   /* Safari 4.0 - 8.0 */
+   @-webkit-keyframes pulse {
+    0% {background-color: rgba(0,0,0,0.2);}
+    10% {background-color: rgba(0,0,0,0.4);}
+    20% {background-color: rgba(0,0,0,0.6);}
+    30% {background-color: rgba(0,0,0,0.8);}
+    40% {background-color: rgba(0,0,0,0.6);}
+    50% {background-color: rgba(0,0,0,0.4);}
+    30% {background-color: rgba(0,0,0,0.2);}
+    80% {background-color: rgba(0,0,0,0.4);}
+    100% {background-color: rgba(0,0,0,0.6);}
+ }
+ /* Standard syntax */
+ @keyframes example {
+     from {background-color: lightgray;}
+     to {background-color: lightgray;}
+ }
+    /* Header */
+.header {
+    -webkit-animation: pulse 40s infinite alternate;
+    /* background: gray; */
+    border-radius: 100px;
+    color: orangered;
+}
+
+h1 {
+    font-weight: bolder;
+    font-size: 5em;
+    text-align: center;
+}
+
+aside {
+    float: left;
+    cursor: pointer;
+    visibility: hidden;
+}
+
+/* Container around the sqaures */
+.container {
+    align-content: space-between;
+}
+/* Row One of the Board */
+.flex-containerOne {
+    cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    grid-template-columns: 100px 50px 100px;
+    grid-template-rows: 80px auto 80px;
+    grid-column-gap: 10px;
+    grid-row-gap: 15px;
+}
+/* Row Two of the Board */
+.flex-containerTwo {
+    cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    grid-template-columns: 100px 50px 100px;
+    grid-template-rows: 80px auto 80px;
+    grid-column-gap: 10px;
+    grid-row-gap: 15px;
+}
+/* Row Three of the Board */
+.flex-containerThree {
+    cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    grid-template-columns: 100px 50px 100px;
+    grid-template-rows: 80px auto 80px;
+    grid-column-gap: 10px;
+    grid-row-gap: 15px;
+}
+/* individual sqaures */
+.flex-item {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: center;
+    background: blueviolet;
+    padding: 5px;
+    width: 50px;
+    height: 50px;
+    margin: 10px;
+}
+/* zoom hover flags */
+* {
+    box-sizing: border-box;
+}
+.zoom {
+    padding: 10px;
+    transition: transform .2s;
+    width: 175px;
+    height: 175px;
+}
+ .zoom:hover {
+    -ms-transform: scale(1.5);  /* IE 9 */
+    -webkit-transform: scale(1.5); /* Safari 3-8 */
+    transform: scale(1.5);
+}
+
+.video {
+    cursor: pointer;
+    color: transparent;
+    position: relative;
+    bottom: 575px;
+    right: 14px;
+    float: right;
+}
+
+.audio {
+    cursor: pointer;
+    color: transparent;
+    position: relative;
+    bottom: 410px;
+    left: 290px;
+    float: right;
+}
+
+/* Footer */
+.footer {
+    -webkit-animation: pulse 40s infinite alternate;
+    /* background: gray; */
+    color: orangered;
+    bottom: 100px;
+    float: right;
+    border-radius: 200px;
+    width: 300px;
+    position: relative;
+    left: 590px;
+    float: right;
+
+    /* margin: 0px 0px 0px 0px;
+    padding: 10px 10px; */
+}
+
+
+.endgame {
+    display: none;
+    width: 400px;
+    top: 120px;
+    top: 120px;
+    background-color: rgb(255, 0, 119);
+    position: absolute;
+    left: 50%;
+    margin-left: -200px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    text-align: center;
+    border-radius: 5px;
+    color: white;
+    font-size: 1em;
+}
+
+/* The Modal (background) */
+.modal {
+    border-radius: 25px;
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: darkkhaki; /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    border-radius: 5px;
+    background-color: burlywood;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+    color: palegoldenrod;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+} 
