--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,6 +1,6 @@
-@import '~bootstrap/scss/bootstrap';
+// @import '~bootstrap/scss/bootstrap';
 
-/* table {
+ table {
     border-collapse: collapse;
 }
 table, th, td {
@@ -9,11 +9,11 @@ table, th, td {
     border: 1px solid black;
     padding: 0px;
     text-align: left;
-} */
+} 
 
 body {
     font-family: 'Times New Roman', Times, serif;
-    background: url(star1.jpg) no-repeat center center fixed;
+    background: url("public/images/star1.jpg") no-repeat center center fixed;
     background-size: cover;
     cursor: pointer;
 }
