--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -174,7 +174,7 @@ aside {
     border-radius: 25px;
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+//     z-index: 1; /* Sit on top */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
@@ -184,7 +184,7 @@ aside {
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
-/* Modal Content/Box */
+// /* Modal Content/Box */
 .modal-content {
     border-radius: 5px;
     background-color: transparent;
