message color update

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -207,3 +207,27 @@ aside {
     text-decoration: none;
     cursor: pointer;
 } 
+
+#message {
+  color: orangered;
+}
+
+#message2 {
+  color: orangered;
+}
+
+#message3 {
+  color:orangered ;
+}
+
+#message4 {
+  color: orangered;
+}
+
+#message5 {
+  color: orangered;
+}
+
+#message6 {
+  color: orangered;
+}
